<resources>
    <string name="app_name">YellaDriver</string>
    <string name="yalla_job_number">Job #0099</string>
    <string name="yalla_job_order_title">Orders : </string>
    <string name="yalla_job_date">July 20, 2021</string>
    <string name="yalla_card_address">Building No 268, Street 280,Zone 55,
1st Floor(Above Royal Toys),Al Furousia Street Muaither,
Doha, Qatar 63402</string>
    <string name="yalla_card_address2">Building No 2, Street 2,Zone 12,
1st Floor(Above Royal Toys),Al Street,
Doha, Qatar 63402</string>
    <string name="yalla_job_order_distance_title">Distance : </string>
    <string name="region_text">Region</string>
    <string name="region_text_value">Qatar</string>
    <string name="vehicle_details_text">Vehicle Details</string>
    <string name="textView_vehicle_details_text">SUV Hyundai Creta</string>
    <string name="how_to_use">How to use</string>
    <string name="feedback">Feedback</string>
    <string name="chat_customer_care">Chat with Customer care</string>
    <string name="chat_warehouse">Chat with Warehouse</string>
    <string name="call_customer">Call \n Customer Care</string>
    <string name="call_warehouse">Call Warehouse</string>
    <string name="card_payment">Card Payment</string>
    <string name="status">Online</string>
    <string name="hint"><font size="12">Hint!</font></string>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="Quantity">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
    </string-array>
</resources>