<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageviewOrder"
                android:layout_width="11dp"
                android:layout_height="12dp"
                android:layout_below="@+id/textview_job_number"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="17dp"
                android:src="@drawable/path_icon" />

            <ImageView
                android:id="@+id/imageviewLocation"
                android:layout_width="11dp"
                android:layout_height="12dp"
                android:layout_below="@+id/imageviewOrder"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="14dp"
                android:src="@drawable/location"></ImageView>

            <ImageView
                android:id="@+id/imageviewEarnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_title"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@id/textview_distance_value"
                android:src="@drawable/earnings" />

            <TextView
                android:id="@+id/textview_job_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center"
                android:text="@string/yalla_job_number"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textview_job_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/yalla_job_date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_job_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_number"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/imageviewOrder"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/yalla_job_order_title"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_number"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/textview_job_title"
                android:fontFamily="@font/rubik_regular"
                android:text="5"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/textviewDistanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/imageviewOrder"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/yalla_job_order_distance_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textview_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_title"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/textviewDistanceText"
                android:fontFamily="@font/rubik_regular"
                android:text="28 KMS"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/textview_earnings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/imageviewEarnings"
                android:fontFamily="@font/rubik_regular"
                android:text="Earnings :"
                android:textSize="14sp"></TextView>

            <TextView
                android:id="@+id/textview_earnings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_job_title"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/textview_earnings_text"
                android:fontFamily="@font/rubik_regular"
                android:text="QAR 15"
                android:textSize="14sp"></TextView>

            <Button
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textviewDistanceText"
                android:layout_alignParentLeft="true"
                android:text="Accept" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>